--- a/Gerador de CPF/html/geradorCnpj.html
+++ b/Gerador de CPF/html/geradorCnpj.html
@@ -3,7 +3,9 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <script src="../JS/geradorCpf.js" async></script>
+        <script src="../JS/script.js" async></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.inputmask/3.3.4/jquery.inputmask.bundle.min.js"></script>
         <link rel= "stylesheet" href= "../CSS/style.css">
         <title>Treinamento</title>
     </head>
@@ -16,19 +18,14 @@
 				    <a href="validadorCnpj.html">Validador de CNPJ</a>    | 
 				    <a href="geradorCnpj.html">Gerador de CNPJ</a>	
 			    </div>
-                <h3>Gerador de CPF</h3>
-            </div>
-            <div class="body">
-                <p>
-                    <div class="calcula">
-                        <span id="resultado"> ___.___.___-__ </span>
-                    </div>
-                <p>
-                <button class="btValidar" onclick="gerarCpf()" >Gerar</button>
-            </div>
-                <div class="footer">
-                    
+                <h3>Gerador de CNPJ</h3>
+                <div class="body">
+                    <input type="text" class="caixa" placeholder="___-___-___-__" maxlength="14"/>
+                    <button class="btValidar" onclick="geradorCnpj()" >Gerar</button>
                 </div>
+                <div class="footer">
+                    <span class="resultado"> </span>
             </div>
+        </div>
     </body>
 </html>
