--- a/html/geradorCnpj.html
+++ b/html/geradorCnpj.html
@@ -3,9 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <script src="../JS/script.js" async></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.inputmask/3.3.4/jquery.inputmask.bundle.min.js"></script>
+        <script src="../JS/geradorCnpj.js" async></script>
         <link rel= "stylesheet" href= "../CSS/style.css">
         <title>Treinamento</title>
     </head>
@@ -19,13 +17,18 @@
 				    <a href="geradorCnpj.html">Gerador de CNPJ</a>	
 			    </div>
                 <h3>Gerador de CNPJ</h3>
-                <div class="body">
-                    <input type="text" class="caixa" placeholder="___-___-___-__" maxlength="14"/>
-                    <button class="btValidar" onclick="geradorCnpj()" >Gerar</button>
-                </div>
-                <div class="footer">
-                    <span class="resultado"> </span>
             </div>
-        </div>
+            <div class="body">
+                <p>
+                    <div class="calcula">
+                        <span id="resultado"> __.___.___/____-__ </span>
+                    </div>
+                <p>
+                <button class="btValidar" onclick="gerardorCnpj()" >Gerar</button>
+            </div>
+                <div class="footer">
+                    
+                </div>
+            </div>
     </body>
 </html>
