Apeimoramento do CSS

--- a/html/validadorCnpj.html
+++ b/html/validadorCnpj.html
@@ -13,19 +13,20 @@
        <div class="container">
             <div class="header">
                 <div id="menu">
-				<a href="index.html">Validador de CPF</a>  	|
-				<a href="geradorCpf.html">Gerador de CPF</a> 	 |
-				<a href="validadorCnpj.html">Validador de CNPJ</a>    | 
-				<a href="geradorCnpj.html">Gerador de CNPJ</a>	
-			</div>
+				    <a href="index.html">Validador de CPF</a>  	|
+				    <a href="geradorCpf.html">Gerador de CPF</a> 	 |
+				    <a href="validadorCnpj.html">Validador de CNPJ</a>    | 
+				    <a href="geradorCnpj.html">Gerador de CNPJ</a>	
+			    </div>
                 <h3>Validador de CNPJ</h3>
             </div>
-            <div class="body">
-                <input type="text", class="caixa", id="cnpj", placeholder="__.___.___/____-__", maxlength="18"/>
-                <button id="btValidar" onclick="validarCNPJ()" >Validar</button>
+            <div>
+                <input type="text", class="box", id="cnpj", placeholder="__.___.___/____-__", maxlength="18"/>
+                <br>
+                <button class="button", onclick="validarCNPJ()" >Validar</button>
             </div>
-                <div class="footer">
-                    <span id="resultado"> </span>
+            <div class="footer">
+                <span id="resultado"> </span>
             </div>
        </div>
     </body>
