--- a/html/geradorCnpj.html
+++ b/html/geradorCnpj.html
@@ -17,18 +17,16 @@
 				    <a href="geradorCnpj.html">Gerador de CNPJ</a>	
 			    </div>
                 <h3>Gerador de CNPJ</h3>
+                <br>
             </div>
-            <div class="body">
-                <p>
-                    <div class="calcula">
-                        <span id="resultado"> __.___.___/____-__ </span>
-                    </div>
-                <p>
-                <button class="btValidar" onclick="gerardorCnpj()" >Gerar</button>
-            </div>
-                <div class="footer">
-                    
+            <div>
+                <div>
+                    <span type="box", class="box", id="resultado"> __.___.___/____-__ </span>
+                    <br>
+                    <br>
+                    <button class="button", onclick="gerardorCnpj()" >Gerar</button>
                 </div>
             </div>
+        </div>
     </body>
 </html>
