--- a/html/geradorCpf.html
+++ b/html/geradorCpf.html
@@ -17,18 +17,16 @@
 				    <a href="geradorCnpj.html">Gerador de CNPJ</a>	
 			    </div>
                 <h3>Gerador de CPF</h3>
+                <br>
             </div>
-            <div class="body">
-                <p>
-                    <div class="calcula">
-                        <span id="resultado"> ___.___.___-__ </span>
-                    </div>
-                <p>
-                <button class="btValidar" onclick="gerarCpf()" >Gerar</button>
+            <div>
+                <div>
+                    <span type="box", class="box", id="resultado"> ___.___.___-__ </span>
+                    <br>
+                    <br>
+                    <button class="button", onclick="gerarCpf()" >Gerar</button>
+                </div>      
             </div>
-                <div class="footer">
-                    
-                </div>
-            </div>
+        </div>
     </body>
 </html>
