--- a/html/index.html
+++ b/html/index.html
@@ -20,13 +20,14 @@
 			    </div>
                 <h3>Validador de CPF</h3>
             </div>
-            <div class="body">
-                <input type="text", id="cpf", class="caixa", placeholder="___-___-___-__", maxlength="14"/>
-                <button class="btValidar" onclick="validaCPF()" >Validar</button>
+            <div>
+                <input type="text", class="box", id="cpf", placeholder="___.___.___-__", maxlength="14"/>
+                <br>
+                <button class="button", onclick="validaCPF()" >Validar</button>
             </div>
-                <div class="footer">
-                    <span id="resultado"> </span>
-                </div>
+            <div class="footer">
+                <span id="resultado"> </span>
+            </div>
        </div>
     </body>
 </html>
